[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/DialogBackground.png" type="Texture" id=2]
[ext_resource path="res://Chapters/Chapter00/Dialog00/Stage02_Dialog01_Isabelle.gd" type="Script" id=3]
[ext_resource path="res://Chapters/Chapter00/Dialog00/Stage02_Dialoge01_Isabelle.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[node name="DiaologeBox" type="Control"]
margin_top = 112.0
margin_bottom = 112.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBackground" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.862745 )
scale = Vector2( 1, 1.33333 )
texture = ExtResource( 2 )
centered = false

[node name="OrvilleNameBox" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="orvilleNameBox" type="Sprite" parent="OrvilleNameBox"]
modulate = Color( 0.372549, 0.372549, 0.372549, 0.862745 )
position = Vector2( 7, 7 )
scale = Vector2( 0.190625, 0.270833 )
texture = ExtResource( 2 )
centered = false

[node name="orvilleNameBoxLabel" type="RichTextLabel" parent="OrvilleNameBox"]
margin_left = 23.0
margin_top = 7.0
margin_right = 74.0
margin_bottom = 22.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
text = "Orville"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IsabelleNameBox" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_isabelleNameBox" type="Sprite" parent="IsabelleNameBox"]
modulate = Color( 0.372549, 0.372549, 0.372549, 0.862745 )
position = Vector2( 7, 7 )
scale = Vector2( 0.190625, 0.270833 )
texture = ExtResource( 2 )
centered = false

[node name="IsabelleNameBoxLabel" type="RichTextLabel" parent="IsabelleNameBox"]
margin_left = 21.0
margin_top = 7.0
margin_right = 72.0
margin_bottom = 22.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
text = "Isabelle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_top = 27.0
margin_right = 304.0
margin_bottom = 58.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
[connection signal="timeout" from="Timer" to="RichTextLabel" method="_on_Timer_timeout"]
